# arbiter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  justfile
.github/: labels.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: book.yaml  release.yaml  rust.yaml
arbiter/: Cargo.toml
arbiter-bindings/: Cargo.toml
arbiter-core/: Cargo.toml
arbiter-core/src/: agent.rs  environment.rs  error.rs  handler.rs  lib.rs  machine.rs  messager.rs  universe.rs  world.rs
arbiter-core/src/network/: memory.rs  mod.rs  tcp.rs
arbiter-core/src/runtime/: mod.rs  wasm.rs
arbiter-core/tests/: contracts.rs  events_integration.rs  lib.rs  multi_agent.rs
arbiter-core/tests/engine/: mod.rs
arbiter-engine/: Cargo.toml  LICENSE
arbiter-engine/src/: agent.rs  environment.rs  error.rs  lib.rs  machine.rs  messager.rs  universe.rs  world.rs
arbiter-engine/tests/: common.rs  machine_integration.rs  mock_simulation.rs  universe_integration.rs
arbiter-ethereum/: Cargo.toml
arbiter-ethereum/benches/: bench.rs
arbiter-ethereum/src/: coprocessor.rs  errors.rs  lib.rs
arbiter-ethereum/src/database/: mod.rs
arbiter-ethereum/src/environment/: instruction.rs
arbiter-ethereum/tests/: environment_integration.rs
arbiter-macros/: Cargo.toml
arbiter-macros/src/: lib.rs
arbiter/src/: lib.rs
bindings/: arbiter.toml  foundry.toml
core/: Cargo.toml
core/benches/: bench.rs
core/src/: events.rs
core/src/console/: mod.rs
core/src/database/: fork.rs  inspector.rs
core/src/environment/: mod.rs
core/src/middleware/: connection.rs  mod.rs  nonce_middleware.rs
core/tests/: common.rs  middleware_integration.rs
docs/: Cargo.toml  build.rs
engine/: Cargo.toml
engine/src/: agent.rs  errors.rs  machine.rs  messager.rs  universe.rs  world.rs
engine/tests/: common.rs  machine_integration.rs  mock_simulation.rs  universe_integration.rs
examples/fork/: weth_config.toml
examples/leader/: Cargo.toml  index.html
examples/leader/src/: lib.rs  server.rs
examples/minter/behaviors/: mod.rs  token_admin.rs  token_requester.rs
macros/src/: lib.rs
