[package]
authors = ["Harness Labs"]
edition = "2021"
name    = "arbiter-core"
version = "0.1.0"

[dependencies]
# Error and logging
serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

# WASM dependencies (optional)
serde_json   = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tracing-test = { workspace = true }

[features]
default = []
wasm    = ["wasm-bindgen", "serde_json"]
