[package]
authors = ["Harness Labs"]
edition = "2021"
license = "AGPL-3.0"
name    = "arbiter-engine"
version = "0.1.0"

[dependencies]
# Serialization
serde = { workspace = true, features = [
    "derive",
] } # TODO: We should likely use a zero-copy serialization lib for speed.
serde_json = { version = "1.0" } # TODO: This is just for testing really, we can use any serailization eventually.
toml = "0.8"

# Async
async-stream.workspace = true
async-trait.workspace  = true
futures.workspace      = true
tokio                  = { workspace = true, features = [] }

# Error and logging
thiserror.workspace = true
tracing.workspace   = true

[dev-dependencies]
arbiter-macros     = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test       = { workspace = true }
